[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "decorator>=4.0.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "imageio>=2.5",
    "moviepy==1.0.3",
    "numpy>=1.17.3",
    "pillow>=10.4.0",
    "proglog>=0.1.10",
    "psycopg2-binary>=2.9.10",
    "pytube>=15.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.1.26",
]
